# uScheduler

./: Jenkinsfile  LICENSE  README.md  appointment_repo.py  test_booking_service.py
.github/workflows/: ci.yml  deploy.yml
backend/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_role_dealership_service_type_tech_constraint.py  0003_add_status_check_constraint.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: appointments.py  auth.py  reference.py
backend/app/core/: config.py  exceptions.py  locks.py  logging.py  metrics.py  notifications.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  models.py
backend/app/repositories/: appointment_repo.py
backend/app/schemas/: schemas.py
backend/app/services/: auth_service.py  booking_service.py
backend/docs/: curl-examples.md
backend/scripts/: entrypoint.sh  seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_auth_service.py  test_booking_service.py
deploy/: ecr-push.sh  ecs-deploy.sh  task-definition.template.json
docs/system-design/: 01-requirements.md  02-core-entities.md  03-api-design.md  04-high-level-design.md  05-deep-dives.md  README.md
docs/system-design/diagrams/: 01-architecture.md  02-entity-relationship.md  03-booking-flow.md  04-availability-check.md
